- Added a tooltip to the password input show/hide icon - Fixed radio control being out of place at certain text sizes - Added ability for a custom element to be added to a control - Fixed page error styling

--- a/src/common/standaloneControls/checkbox/styles.scss
+++ b/src/common/standaloneControls/checkbox/styles.scss
@@ -18,8 +18,9 @@ label.radioOrCheckbox {
         border-radius: 50%;
         background: var(--label);
         position: absolute;
-        top: 9px;
-        left: 9px;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
         color-adjust: exact;
       }
       & + .checkbox-control .icon {
